--- a/express_2/public/index.html
+++ b/express_2/public/index.html
@@ -35,7 +35,7 @@
         <section class="genre-select-container">
             <label for="genre-select">View by genre</label>
             <select id="genre-select">
-                <option value="">Show All</option>
+                <option value="">show all</option>
             </select>
         </section>
 
